--- a/html/Bolg.html
+++ b/html/Bolg.html
@@ -97,7 +97,7 @@
 </head>
 <body>
     <header class="header">
-        <h1><a href="./index.html">WANG Binghao Blogs</a></h1>
+        <h1><a href="../index.html">WANG Binghao Blogs</a></h1>
     </header>
 
     <main class="content">
