--- a/html/News.html
+++ b/html/News.html
@@ -78,7 +78,7 @@
 </head>
 <body>
     <header class="header">
-        <h1> <a href="./index.html" target="_blank">WANG Binghao News</a></h1>
+        <h1> <a href="../index.html" target="_blank">WANG Binghao News</a></h1>
     </header>
 
     <main class="content">
