--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
     <!-- Stylesheets -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/click.css">
-    <link rel="stylesheet" href="../css/normalize.css">
+    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/click.css">
+    <link rel="stylesheet" href="./css/normalize.css">
 
 </head>
 
@@ -28,19 +28,19 @@
         <!-- Header -->
         <header>
             <div class="inner">
-                <h1><a href="./WangBinghao_page.html" title="logo">
+                <h1><a href="./index.html" title="logo">
 					Binghao WANG
                 </a></h1>
                 <div class="drawer">
                     <nav class="g-nav">
                         <ul class="menu-nav">
                             <li class="sp"><a href="/">Home</a></li>
-                            <li><a href="./News.html" target="_blank">News</a></li>
+                            <li><a href="./html/News.html" target="_blank">News</a></li>
                             <li><a href="https://drive.google.com/file/d/1P2JM0Vvap53gNmecMQm0R-YgmBZJ5HhQ/view?usp=drive_link" target="_blank">Curriculum_Vitae</a></li>
 
-                            <li><a href="./Bolg.html" target="_blank">Blog</a></li>
-                            <li><a href="./About.html" target="_blank">About</a></li>
-                            <li><a href="./Contacts.html" target="_blank">Contacts</a></li>
+                            <li><a href="./html/Bolg.html" target="_blank">Blog</a></li>
+                            <li><a href="./html/About.html" target="_blank">About</a></li>
+                            <li><a href="./html/Contacts.html" target="_blank">Contacts</a></li>
                         </ul>
                         
                         <ul class="sns-nav">
@@ -63,10 +63,10 @@
 
         <!-- Main Visual -->
         <div class="Top">
-            <img src="../image/fotor-ai-.jpg" alt="Artist Name" class="top_image">
-            <a class="top_image_section section1" href="./AI.html" target="_blank"><span class="section_text">AI</span></a>
-            <a class="top_image_section section2" href="./Game.html" target="_blank""><span class="section_text">GAME</span></a>
-            <a class="top_image_section section3" href="./Art.html" target="_blank""><span class="section_text">ART</span></a>
+            <img src="./image/fotor-ai-.jpg" alt="Artist Name" class="top_image">
+            <a class="top_image_section section1" href="./html/AI.html" target="_blank"><span class="section_text">AI</span></a>
+            <a class="top_image_section section2" href="./html/Game.html" target="_blank""><span class="section_text">GAME</span></a>
+            <a class="top_image_section section3" href="./html/Art.html" target="_blank""><span class="section_text">ART</span></a>
         </div>
 
 
@@ -83,15 +83,9 @@
                             <p class="t">I have created my own personal homepage. I will improve my previous works in the near future, and then continue to update my dynamics in various aspects on the website.</p>
                         </a>
                     </li>
-                    <li class="new">
-                        <a>
-                            <p class="date">2024.12.03</p>
-                            <p class="t">I have created my own personal homepage. I will improve my previous works in the near future, and then continue to update my dynamics in various aspects on the website.</p>
-                        </a>
-                    </li>
                     <!-- More news items -->
                 </ul>
-                <p class="list__more"><a href="./News.html" target="_blank">VIEW MORE</a></p>
+                <p class="list__more"><a href="./html/News.html" target="_blank">VIEW MORE</a></p>
             </div>
 
 
@@ -105,17 +99,12 @@
                 <div class="video-wrapper">
                     <div class="list--video">
                         <div class="video-item">
-                            <iframe src="https://www.youtube.com/embed/v274vOooED8" frameborder="0" allowfullscreen></iframe>
+                            <iframe src="https://www.youtube.com/embed/VHqfpb8KR4E" frameborder="0" allowfullscreen></iframe>
                         </div>
                         <div class="video-item">
-                            <iframe src="https://www.youtube.com/embed/v274vOooED8" frameborder="0" allowfullscreen></iframe>
+                            <iframe src="https://www.youtube.com/embed/LkJIZImhxpo" frameborder="0" allowfullscreen></iframe>
                         </div>
-                        <div class="video-item">
-                            <iframe src="https://www.youtube.com/embed/v274vOooED8" frameborder="0" allowfullscreen></iframe>
-                        </div>
-                        <div class="video-item">
-                            <iframe src="https://www.youtube.com/embed/v274vOooED8" frameborder="0" allowfullscreen></iframe>
-                        </div>
+                    
                     </div>
                 </div>
                 <button class="nav-btn next">&gt;</button>
@@ -139,6 +128,6 @@
     <!-- Scripts -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick.min.js"></script>
-	<script src="../js/main.js"></script>
+	<script src="./js/main.js"></script>
 </body>
 </html>
