--- a/html/About.html
+++ b/html/About.html
@@ -80,7 +80,7 @@
     </style>
 </head>
 <body>
-    <a href="./index.html"><h1>WANG Binghao</h1></a>
+    <a href="../index.html"><h1>WANG Binghao</h1></a>
     <div class="location">Japan University of Aizu</div>
 
     <div class="container">
