--- a/html/Game.html
+++ b/html/Game.html
@@ -67,7 +67,7 @@
 <body>
 
                 <div class="inner">
-                    <h1><a href="./index.html" title="logo">
+                    <h1><a href="../index.html" title="logo">
                         Binghao WANG
                     </a></h1>
                     </div>
