--- a/html/News.html
+++ b/html/News.html
@@ -80,8 +80,16 @@
     <header class="header">
         <h1> <a href="../index.html" target="_blank">WANG Binghao News</a></h1>
     </header>
-
+    
     <main class="content">
+
+        <div class="message">
+            <div class="message-content">
+                I'm working on some shader effects and blogging recently. I plan to finish it in two weeks.
+            </div>
+            <div class="timestamp">2024-12-10 </div>
+        </div>
+
         <div class="message">
             <div class="message-content">
                 I have created my own personal homepage. I will improve my previous works in the near future, and then continue to update my dynamics in various aspects on the website.
