--- a/index.html
+++ b/index.html
@@ -77,11 +77,21 @@
             <div class="block--news">
                 <h2 class="block-tit">NEWS</h2>
                 <ul class="list--information">
+
+                    <li class="new">
+                        <a>
+                            <p class="date">2024.12.10</p>
+                            <p class="t">I'm working on some shader effects and blogging recently. I plan to finish it in two weeks.</p>
+                        </a>
+
                     <li class="new">
                         <a>
                             <p class="date">2024.12.03</p>
                             <p class="t">I have created my own personal homepage. I will improve my previous works in the near future, and then continue to update my dynamics in various aspects on the website.</p>
                         </a>
+                    </li>
+
+
                     </li>
                     <!-- More news items -->
                 </ul>
