--- a/index.html
+++ b/index.html
@@ -80,6 +80,14 @@
 
                     <li class="new">
                         <a>
+                            <p class="date">2024.12.18</p>
+                            <p class="t">I will be participating in a 7-day game jam on the 20th. I will be making a game demo during this period. I am looking forward to it.</p>
+                        </a>
+
+                    <li class="new">
+
+                    <li class="new">
+                        <a>
                             <p class="date">2024.12.10</p>
                             <p class="t">I'm working on some shader effects and blogging recently. I plan to finish it in two weeks.</p>
                         </a>
