--- a/html/News.html
+++ b/html/News.html
@@ -85,6 +85,13 @@
 
         <div class="message">
             <div class="message-content">
+                I will be participating in a 7-day game jam on the 20th. I will be making a game demo during this period. I am looking forward to it.
+            </div>
+            <div class="timestamp">2024-12-18 </div>
+        </div>
+
+        <div class="message">
+            <div class="message-content">
                 I'm working on some shader effects and blogging recently. I plan to finish it in two weeks.
             </div>
             <div class="timestamp">2024-12-10 </div>
