add game object
add object "Lost in Cat"

--- a/html/Game.html
+++ b/html/Game.html
@@ -74,6 +74,15 @@
 
 
 
+    <div class="project">
+        <div class="project-content">
+            <h2 class="project-title">Lost in Cat</h2>
+            <p class="project-description">
+                "Lost in Cat" is a high-tech horizontal platform jumping game. Players need to use high-tech drones to build a path for the kitten to move forward, cross ruins and dangerous places, and find hope. The game combines wasteland and future technology styles. The dynamic platform creation mechanism challenges the player's strategy and operation. The narrative and music render a warm journey across despair and hope.
+            </p>
+            <img src="../image/game4.png" alt="项目2" class="project-image">
+        </div>
+    </div>
 
 
     <div class="project">
