add Art project and blog
add Art project and blog about "sahder effect"

--- a/html/Art.html
+++ b/html/Art.html
@@ -75,9 +75,20 @@
 
 
 
-
     <div class="project">
     <!-- 项目2 -->
+        <div class="project-content">
+            <h2 class="project-title">Use shader code in Unity to reproduce  art effects</h2>
+            <p class="project-description">
+                According to more than ten different themes, I used shader to reproduce several special art effects. I wrote bolg, and various art effects are displayed at the <a href="../Blog/Use shader code in Unity to reproduce  art effects.html" target="_blank">Display Blog</a>
+            </p>
+            <img src="../image/Art3.png" alt="项目2" class="project-image">
+        </div>
+    </div>
+
+
+    <div class="project">
+    <!-- 项目1 -->
         <div class="project-content">
             <h2 class="project-title">House interior modeling using 3Dmax</h2>
             <p class="project-description">
