--- a/html/Bolg.html
+++ b/html/Bolg.html
@@ -17,6 +17,10 @@
             line-height: 1.6;
         }
 
+        .header{
+            padding-bottom: 100px;
+        }
+
         .header a {
             text-decoration: none;
             position: fixed;
@@ -33,7 +37,7 @@
 
         .content {
             max-width: 800px;
-            margin: 80px auto 20px;
+            margin: 0px auto 20px;
             padding: 20px;
         }
 
@@ -47,7 +51,7 @@
             background-color: white;
             border-radius: 8px;
             padding: 20px;
-            margin-bottom: 20px;
+            margin-bottom: 0px;
             position: relative;
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
             transition: transform 0.2s ease;
@@ -99,6 +103,19 @@
     <header class="header">
         <h1><a href="../index.html">WANG Binghao Blogs</a></h1>
     </header>
+
+
+    <main class="content">
+        <a href="../Blog/Use shader code in Unity to reproduce  art effects.html" class="article-link">
+            <div class="article-card">
+                <img class="article-image" src="../image/Art3.png" alt="3D Model">
+                <div class="article-content">
+                    <h2 class="article-title">Use shader code in Unity to reproduce  art effects</h2>
+                    <div class="article-preview"></div>
+                </div>
+            </div>
+        </a>
+    </main>
 
     <main class="content">
         <a href="https://blog.csdn.net/HZBCc/article/details/127705728?spm=1001.2014.3001.5501" class="article-link">
