--- a/html/News.html
+++ b/html/News.html
@@ -85,6 +85,13 @@
 
         <div class="message">
             <div class="message-content">
+                Welcome to 2025. This year I will do more projects and learn more knowledge. I already have two projects in my 2025 plan. Come on!
+            </div>
+            <div class="timestamp">2025-01-01 </div>
+        </div>
+
+        <div class="message">
+            <div class="message-content">
                 I will be participating in a 7-day game jam on the 20th. I will be making a game demo during this period. I am looking forward to it.
             </div>
             <div class="timestamp">2024-12-18 </div>
