--- a/html/News.html
+++ b/html/News.html
@@ -85,6 +85,13 @@
 
         <div class="message">
             <div class="message-content">
+                I recently reproduced a project called Alfworld and wrote a blog about it. Next, I'm going to think about what I can do with this project combined with my skills.
+            </div>
+            <div class="timestamp">2025-02-05 </div>
+        </div>
+
+        <div class="message">
+            <div class="message-content">
                 Welcome to 2025. This year I will do more projects and learn more knowledge. I already have two projects in my 2025 plan. Come on!
             </div>
             <div class="timestamp">2025-01-01 </div>
