--- a/index.html
+++ b/index.html
@@ -80,17 +80,32 @@
 
                     <li class="new">
                         <a>
+                            <p class="date">2024.02.05</p>
+                            <p class="t">I recently reproduced a project called Alfworld and wrote a blog about it. Next, I'm going to think about what I can do with this project combined with my skills.</p>
+                        </a>
+                    </li>
+
+                    <li class="new">
+                        <a>
+                            <p class="date">2025.01.01</p>
+                            <p class="t"> Welcome to 2025. This year I will do more projects and learn more knowledge. I already have two projects in my 2025 plan. Come on!</p>
+                        </a>
+                    </li>
+
+
+                    <li class="new">
+                        <a>
                             <p class="date">2024.12.18</p>
                             <p class="t">I will be participating in a 7-day game jam on the 20th. I will be making a game demo during this period. I am looking forward to it.</p>
                         </a>
-
-                    <li class="new">
+                    </li>
 
                     <li class="new">
                         <a>
                             <p class="date">2024.12.10</p>
                             <p class="t">I'm working on some shader effects and blogging recently. I plan to finish it in two weeks.</p>
                         </a>
+                    </li>
 
                     <li class="new">
                         <a>
