add PBR project

--- a/html/Art.html
+++ b/html/Art.html
@@ -74,6 +74,16 @@
 
 
 
+    <div class="project">
+    <!-- 项目3 -->
+        <div class="project-content">
+            <h2 class="project-title">PBR Rendering</h2>
+            <p class="project-description">
+                PBR (Physically Based Rendering)is a rendering method based on physical principles. It generates more realistic visual effects by simulating real-world lighting, reflection, and material properties (such as metalness and roughness).I have made some PBR renderings in Unity, and you can see that the results are quite realistic. The purpose of PBR rendering is to render as realistically as possible.
+            </p>
+            <img src="../image/PBR.png" alt="项目2" class="project-image">
+        </div>
+    </div>
 
     <div class="project">
     <!-- 项目2 -->
