--- a/html/News.html
+++ b/html/News.html
@@ -85,6 +85,13 @@
 
         <div class="message">
             <div class="message-content">
+                I have deployed Deepseek 32B on my local computer and it works fine. I will use it to do some experiments.
+            </div>
+            <div class="timestamp">2025-02-25 </div>
+        </div>
+
+        <div class="message">
+            <div class="message-content">
                 I recently reproduced a project called Alfworld and wrote a blog about it. Next, I'm going to think about what I can do with this project combined with my skills.
             </div>
             <div class="timestamp">2025-02-05 </div>
