--- a/index.html
+++ b/index.html
@@ -80,7 +80,14 @@
 
                     <li class="new">
                         <a>
-                            <p class="date">2024.02.05</p>
+                            <p class="date">2025.02.25</p>
+                            <p class="t">I have deployed Deepseek 32B on my local computer and it works fine. I will use it to do some experiments.</p>
+                        </a>
+                    </li>
+
+                    <li class="new">
+                        <a>
+                            <p class="date">2025.02.05</p>
                             <p class="t">I recently reproduced a project called Alfworld and wrote a blog about it. Next, I'm going to think about what I can do with this project combined with my skills.</p>
                         </a>
                     </li>
