news page update

--- a/index.html
+++ b/index.html
@@ -80,49 +80,25 @@
 
                     <li class="new">
                         <a>
-                            <p class="date">2025.02.25</p>
-                            <p class="t">I have deployed Deepseek 32B on my local computer and it works fine. I will use it to do some experiments.</p>
+                            <p class="date">2025.02.22</p>
+                            <p class="t">I got a week off and I went to Kasukabe (クレヨンしんちゃん's hometown)</p>
                         </a>
                     </li>
 
                     <li class="new">
                         <a>
-                            <p class="date">2025.02.05</p>
-                            <p class="t">I recently reproduced a project called Alfworld and wrote a blog about it. Next, I'm going to think about what I can do with this project combined with my skills.</p>
+                            <p class="date">2025.02.04</p>
+                            <p class="t">I got home early from the lab today. I was bored at home so I opened my iPad and drew for a while. I haven't drawn on my iPad for a long time. I drew characters from Pop Mart.</p>
                         </a>
                     </li>
 
                     <li class="new">
                         <a>
-                            <p class="date">2025.01.01</p>
-                            <p class="t"> Welcome to 2025. This year I will do more projects and learn more knowledge. I already have two projects in my 2025 plan. Come on!</p>
+                            <p class="date">2025.01.28</p>
+                            <p class="t"> Today is the Chinese New Year. Every festive season makes me miss my family more. My family sent me their New Year’s Eve dinner, but I am still busy doing experiments in the laboratory. This is the first Spring Festival that I have not spent with my family. I may not be able to go back in the short term, but I miss them all the time. </p>
                         </a>
                     </li>
 
-
-                    <li class="new">
-                        <a>
-                            <p class="date">2024.12.18</p>
-                            <p class="t">I will be participating in a 7-day game jam on the 20th. I will be making a game demo during this period. I am looking forward to it.</p>
-                        </a>
-                    </li>
-
-                    <li class="new">
-                        <a>
-                            <p class="date">2024.12.10</p>
-                            <p class="t">I'm working on some shader effects and blogging recently. I plan to finish it in two weeks.</p>
-                        </a>
-                    </li>
-
-                    <li class="new">
-                        <a>
-                            <p class="date">2024.12.03</p>
-                            <p class="t">I have created my own personal homepage. I will improve my previous works in the near future, and then continue to update my dynamics in various aspects on the website.</p>
-                        </a>
-                    </li>
-
-
-                    </li>
                     <!-- More news items -->
                 </ul>
                 <p class="list__more"><a href="./html/News.html" target="_blank">VIEW MORE</a></p>
