--- a/index.html
+++ b/index.html
@@ -81,6 +81,13 @@
                     <li class="new">
                         <a>
                             <p class="date">2025.02.22</p>
+                            <p class="t">Stylesheets</p>
+                        </a>
+                    </li>
+
+                    <li class="new">
+                        <a>
+                            <p class="date">2025.02.22</p>
                             <p class="t">I got a week off and I went to Kasukabe (クレヨンしんちゃん's hometown)</p>
                         </a>
                     </li>
