updata the new page

--- a/html/News.html
+++ b/html/News.html
@@ -137,27 +137,22 @@
             <span class="timestamp">2025-02-22</span>
         </div>
 
-        <div id="news7" class="news-card">
-            <img src="../image/news6.png" alt="New Year 2025">
-            <p> I got home early from the lab today. I was bored at home so I opened my iPad and drew for a while. I haven't drawn on my iPad for a long time. I drew characters from Pop Mart.</p>
-            <span class="timestamp">2025-02-04</span>
-        </div>
 
         <div id="news6" class="news-card">
             <img src="../image/news5.jpg" alt="New Year 2025">
-            <p> Today is the Chinese New Year. Every festive season makes me miss my family more. My family sent me their New Year’s Eve dinner, but I am still busy doing experiments in the laboratory. This is the first Spring Festival that I have not spent with my family. I may not be able to go back in the short term, but I miss them all the time. </p>
+            <p> Today is the Chinese New Year. Every festive season makes me miss my family more. My family sent me their New Year’s Eve dinner by wechat, but I am still busy doing experiments in the laboratory. This is the first Spring Festival that I have not spent with my family. I may not be able to go back in the short term, but I miss them all the time. </p>
             <span class="timestamp">2025-01-28</span>
         </div>
 
         <div id="news5" class="news-card">
             <img src="../image/news4.5.jpg" alt="New Year 2025">
-            <p> I participated in Unity's official game jam (creating a game within a week) and won a medal. This is not the best result. I hope I can improve my ability and imagination and win better awards in the next game jam. </p>
+            <p> I participated in Unity's official game jam (creating a game within a week) and won a medal. I hope I can improve my ability and imagination and win better awards in the next game jam. </p>
             <span class="timestamp">2025-01-16</span>
         </div>
 
         <div id="news4" class="news-card">
             <img src="../image/new4.png" alt="New Year 2025">
-            <p> On the New Year's Day, I went to Sensoji Temple to draw a fortune, and it was a good fortune. I really hope that the coming year will be smooth. This is an important year. </p>
+            <p> On the New Year's Day, I went to Sensoji Temple to draw a fortune, and it was a good fortune. I really hope that the coming year will be smooth. </p>
             <span class="timestamp">2025-01-01</span>
         </div>
 
@@ -175,7 +170,7 @@
 
         <div id="news1" class="news-card">
             <img src="../image/News1.png" alt="New Year 2025">
-            <p> I created my own website, where I will update my blog (in fact, most of my technical blogs are updated on CSDN), update my projects, and my chatter. This is the beginning of my website. I am a person who likes to record, even if I am the only audience, so I have to keep updating my website.</p>
+            <p> I created my own website, where I will update my  projects, and my chatter. This is the beginning of my website.</p>
             <span class="timestamp">2024-11-20</span>
         </div>
 
