--- a/image/Use shader code in Unity to reproduce  art effects.html
+++ b/image/Use shader code in Unity to reproduce  art effects.html
@@ -103,6 +103,13 @@
                 <img src="../image/Use shader code in Unity to reproduce  art effects6.png" alt="">
             </div>
         </section>
+
+        <section class="block">
+            <h2>animation</h2>
+            <div class="content">
+                <img src="../image/Use shader code in Unity to reproduce  art effects6.png" alt="">
+            </div>
+        </section>
         
     </div>
 </body>
