--- a/html/News.html
+++ b/html/News.html
@@ -131,6 +131,12 @@
     <!-- 主要内容区域 -->
     <main class="content">
 
+        <div id="news7" class="news-card">
+            <img src="../image/news8.png" alt="New Year 2025">
+            <p> Travel to Kansai area (Kyoto, Osaka, Nara) during Golden Week</p>
+            <span class="timestamp">2025-05-06</span>
+        </div>
+
         <div id="news8" class="news-card">
             <img src="../image/news7.png" alt="New Year 2025">
             <p> I got a week off and I went to Kasukabe (クレヨンしんちゃん's hometown)</p>
