add some project

--- a/html/AI.html
+++ b/html/AI.html
@@ -74,6 +74,18 @@
             </a></h1>
     </div>
 
+    <div class="project">
+        <!-- 项目5 -->
+        <div class="project-content">
+            <h2 class="project-title"> IK-Augmented Sign Language: Scalable Training
+ for Deep Recognition Models</h2>
+            <p class="project-description">
+                I present a kinematics-driven data augmentation framework for sign language recognition that employs inverse kinematics (IK) within a 3D simulation environment to generate anatomically coherent gesture sequences. By reconstructing full-body poses from MediaPipe keypoints and introducing multimodal perturbations (e.g., spatial jitter, depth offset, IK sensitivity), our method enriches gesture variability beyond traditional augmentation. Extensive experiments across five deep learning models demonstrate consistent performance gains, particularly with Transformer-based architectures.
+            </p>
+            <img src="../image/AI5.png" alt="项目2" class="project-image">
+        </div>
+    </div>
+
 
     <div class="project">
         <!-- 项目4 -->
