网站外观更新

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
 	
 
 
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;600;700&family=Outfit:wght@300;400;500;600&display=swap" rel="stylesheet">
+
     <!-- Stylesheets -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./css/main.css">
@@ -77,7 +82,12 @@
             <div class="block--news">
                 <h2 class="block-tit">NEWS</h2>
                 <ul class="list--information">
-
+                    <li class="new">
+                        <a>
+                            <p class="date">2025.05.06</p>
+                            <p class="t">Travel to Kansai area (Kyoto, Osaka, Nara) during Golden Week</p>
+                        </a>
+                    </li>
 
                     <li class="new">
                         <a>
@@ -92,15 +102,6 @@
                             <p class="t">I got home early from the lab today. I was bored at home so I opened my iPad and drew for a while. I haven't drawn on my iPad for a long time. I drew characters from Pop Mart.</p>
                         </a>
                     </li>
-
-                    <li class="new">
-                        <a>
-                            <p class="date">2025.01.28</p>
-                            <p class="t"> Today is the Chinese New Year. Every festive season makes me miss my family more. My family sent me their New Year’s Eve dinner, but I am still busy doing experiments in the laboratory. This is the first Spring Festival that I have not spent with my family. I may not be able to go back in the short term, but I miss them all the time. </p>
-                        </a>
-                    </li>
-
-                    <!-- More news items -->
                 </ul>
                 <p class="list__more"><a href="./html/News.html" target="_blank">VIEW MORE</a></p>
             </div>
