--- a/html/Contacts.html
+++ b/html/Contacts.html
@@ -3,70 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Arial, sans-serif;
-            line-height: 1.6;
-            color: #2c3e50;
-            background-color: #f5f5f5;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            padding: 20px;
-        }
-
-        .contact-card {
-            background-color: white;
-            border-radius: 10px;
-            padding: 40px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-            max-width: 500px;
-            width: 100%;
-            text-align: center;
-        }
-
-        h1 {
-            color: #2c4350;
-            margin-bottom: 20px;
-            font-size: 2em;
-        }
-
-        p {
-            margin-bottom: 25px;
-            color: #666;
-            font-size: 1.1em;
-        }
-
-        .email {
-            display: inline-block;
-            color: #2c4350;
-            font-size: 1.2em;
-            padding: 10px 20px;
-            border: 2px solid #2c4350;
-            border-radius: 5px;
-            text-decoration: none;
-            transition: all 0.3s ease;
-        }
-
-        .email:hover {
-            background-color: #2c4350;
-            color: white;
-        }
-    </style>
+    <title>Contact - Binghao WANG</title>
+    
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;600;700&family=Outfit:wght@300;400;500;600&display=swap" rel="stylesheet">
+    
+    <link rel="stylesheet" href="../css/pages.css">
 </head>
 <body>
-    <div class="contact-card">
-        <h1>Contact Me</h1>
-        <p>If you have any questions or would like to discuss anything, please feel free to contact me via email.</p>
-        <a href="mailto:your.email@example.com" class="email">takashiwangbh@gmail.com</a>
+    <header class="page-header">
+        <div class="page-header-inner">
+            <h1><a href="../index.html">Binghao WANG</a></h1>
+            <a href="../index.html" class="back-link">← Back to Home</a>
+        </div>
+    </header>
+
+    <div class="contact-container">
+        <div class="contact-card">
+            <h1>Contact Me</h1>
+            <p>If you have any questions or would like to discuss anything, please feel free to contact me via email.</p>
+            <a href="mailto:takashiwangbh@gmail.com" class="contact-email">takashiwangbh@gmail.com</a>
+        </div>
     </div>
 </body>
 </html>
