--- a/html/AI.html
+++ b/html/AI.html
@@ -24,11 +24,22 @@
         <h1 class="page-title">AI Projects</h1>
         
         <div class="project-list">
+
+            <article class="project-card">
+                <div class="project-card-content">
+                    <h2 class="project-card-title">Practical Local Deployment of a "Stanford AI Town" Model: Multi-Agent Memory, Reasoning, and Social Simulation</h2>
+                    <p class="project-card-description">
+                        "Stanford AI Town" is a Generative Agents project that explores how multiple AI agents with memory, reasoning, and autonomous decision-making capabilities can operate long-term in a virtual environment with complete infrastructure, and "live" and "socialize" in a human-like manner.Based on the Microverse project, I implemented similar functionality on my local server and observed the development of autonomous relationships among NPCs.
+                    </p>
+                </div>
+                <img src="../image/Stanford AI Town.png" alt="Sign Language Recognition">
+            </article>
+
             <article class="project-card">
                 <div class="project-card-content">
                     <h2 class="project-card-title">IK-Augmented Sign Language: Scalable Training for Deep Recognition Models</h2>
                     <p class="project-card-description">
-                        I present a kinematics-driven data augmentation framework for sign language recognition that employs inverse kinematics (IK) within a 3D simulation environment to generate anatomically coherent gesture sequences. By reconstructing full-body poses from MediaPipe keypoints and introducing multimodal perturbations (e.g., spatial jitter, depth offset, IK sensitivity), our method enriches gesture variability beyond traditional augmentation. Extensive experiments across five deep learning models demonstrate consistent performance gains, particularly with Transformer-based architectures.
+                        I present a kinematics-driven data augmentation framework for sign language recognition that employs inverse kinematics (IK) within a 3D simulation environment to generate anatomically coherent gesture sequences. By reconstructing full-body poses from MediaPipe keypoints and introducing multimodal perturbations (e.g., spatial jitter, depth offset, IK sensitivity), our method enriches gesture variability beyond traditional augmentation. Extensive experiments across five deep learning models demonstrate consistent performance gains, particularly with Transformer-based architectures.This article was published in the journal "Algorithms".
                     </p>
                 </div>
                 <img src="../image/AI5.png" alt="Sign Language Recognition">
