--- a/html/About.html
+++ b/html/About.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>About - Binghao WANG</title>
     
     <!-- Google Fonts -->
@@ -12,15 +12,15 @@
     
     <link rel="stylesheet" href="../css/pages.css">
 </head>
-<body>
+<body class="page-about">
     <header class="page-header">
         <div class="page-header-inner">
             <h1><a href="../index.html">Binghao WANG</a></h1>
-            <a href="../index.html" class="back-link">← Back to Home</a>
+            <a href="../index.html" class="back-link">← Back</a>
         </div>
     </header>
 
-    <main class="page-content">
+    <main class="page-content page-content--about">
         <div class="about-container">
             <div class="about-content">
                 <h1 class="about-title">About Me</h1>
