--- a/index.html
+++ b/index.html
@@ -110,20 +110,31 @@
             <h2 class="section-tit">TOOLS</h2>
             <p class="section-desc">Small utilities I made for fun</p>
             <div class="projects-grid">
-                <a href="#" class="project-card" target="_blank">
-                    <div class="project-icon">🎨</div>
-                    <h3 class="project-name">Color Picker</h3>
-                    <p class="project-desc">A simple color picker tool</p>
+                <!-- Project 1: Coding Practice -->
+                <a href="https://huggingface.co/spaces/takashiWangbh/coding_practice" class="project-card" target="_blank">
+                    <div class="project-scanline"></div>
+                    <div class="project-corner"></div>
+                    <div class="project-index">01</div>
+                    <h3 class="project-name" data-text="Coding Practice">Coding Practice</h3>
+                    <p class="project-desc">coding practice like a game</p>
                 </a>
+
+                <!-- Project 2: Placeholder -->
                 <a href="#" class="project-card" target="_blank">
-                    <div class="project-icon">📝</div>
-                    <h3 class="project-name">Note App</h3>
-                    <p class="project-desc">Quick note taking app</p>
+                    <div class="project-scanline"></div>
+                    <div class="project-corner"></div>
+                    <div class="project-index">02</div>
+                    <h3 class="project-name" data-text="Coming Soon">Coming Soon</h3>
+                    <p class="project-desc">More tools under development</p>
                 </a>
+
+                <!-- Project 3: Placeholder -->
                 <a href="#" class="project-card" target="_blank">
-                    <div class="project-icon">⏱️</div>
-                    <h3 class="project-name">Timer</h3>
-                    <p class="project-desc">Pomodoro timer tool</p>
+                    <div class="project-scanline"></div>
+                    <div class="project-corner"></div>
+                    <div class="project-index">03</div>
+                    <h3 class="project-name" data-text="Coming Soon">Coming Soon</h3>
+                    <p class="project-desc">Stay tuned for updates</p>
                 </a>
             </div>
         </section>
