add tool project

--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
                     <div class="project-scanline"></div>
                     <div class="project-corner"></div>
                     <div class="project-index">02</div>
-                    <h3 class="project-name" data-text="Coming Soon">Coming Soon</h3>
-                    <p class="project-desc">More tools under development</p>
+                    <h3 class="project-name" data-text="Coming Soon">CJapanese Study Abroad Website</h3>
+                    <p class="project-desc">Under review</p>
                 </a>
 
                 <!-- Project 3: Placeholder -->
